// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getClientDetails should not use the devClientId in production 1`] = `
Object {
  "clientId": "https://localhost:3000/api/app",
  "clientName": "Inrupt PodBrowser",
  "redirectUrl": "https://localhost:3000/",
}
`;

exports[`getClientDetails should return configuration for login 1`] = `
Object {
  "clientId": "https://pod.inrupt.com/appsteamdev/clientid.json",
  "clientName": "Inrupt PodBrowser",
  "redirectUrl": "https://localhost:3000/",
}
`;
